fix max width on mobile

--- a/src/Menu.css
+++ b/src/Menu.css
@@ -168,6 +168,10 @@
     display: none;
   }
 
+  .menu-cat {
+    width: auto;
+  }
+
   .mobile-menu {
     display: flex;
     flex-direction: column;
